--- a/AtlasForms/Views/Home/Index.cshtml
+++ b/AtlasForms/Views/Home/Index.cshtml
@@ -1,24 +1,17 @@
-﻿@model AtlasForms.Models.Checklist
-@{
-    ViewBag.Title = "Home Page";
+﻿@{
+    ViewBag.Title = "Contact";
 }
-<div class="col-md-12">
-    <h1>Checklist</h1>
-    <div class="row">
-                <div class="col-md-4 col-sm-6">
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.SalContFirstName, new { @class = "control-label" })<span class="required">*</span>
-                        @Html.TextBoxFor(model => model.SalContFirstName, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.SalContFirstName)
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.SalContLastName, htmlAttributes: new { @class = "control-label" })<span class="required">*</span>
+<h2>@ViewBag.Title.</h2>
+<h3>@ViewBag.Message</h3>
 
-                        @Html.EditorFor(model => model.SalContLastName, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.SalContLastName, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
-</div>
+<address>
+    One Microsoft Way<br />
+    Redmond, WA 98052-6399<br />
+    <abbr title="Phone">P:</abbr>
+    425.555.0100
+</address>
+
+<address>
+    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+</address>
