--- a/AtlasForms/Views/Shared/_Layout.cshtml
+++ b/AtlasForms/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 </head>
 <body>
     <div class="">
@@ -17,7 +18,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p style="text-align:center">Atlas CMS &copy; @DateTime.Now.Year</p>
+            <p style="text-align:center">Atlas Residential & Commerical Services LLC &copy; @DateTime.Now.Year</p>
         </footer>
     </div>
 
